--- a/test-task/inertstoy-home/home.html
+++ b/test-task/inertstoy-home/home.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <title>Нерудные материалы по ГОСТУ - Интерстрой</title>
 
     <link rel="stylesheet" href="css/style.css">
@@ -144,19 +148,124 @@
                                 <button class="banner__btn btn btn-red">Узнать цены</button>
                             </div>
                         </div>
-                        <div class="banner swiper-slide">
-                            <div class="banner__content">
-                                <h2 class="banner__heading">Закажите щебень со&nbsp;скидкой&nbsp;10%</h2>
-                                <ul class="banner__list">
-                                    <li class="banner__list-item">Диоритовый</li>
-                                    <li class="banner__list-item">Мраморный</li>
-                                    <li class="banner__list-item">Белогорский</li>
-                                    <li class="banner__list-item">Ароматный</li>
-                                </ul>
-                                <button class="banner__btn btn btn-red">Узнать цены</button>
-                            </div>
-                        </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="catalog-wrapper">
+            <div class="container">
+                <div class="catalog">
+                    <div class="catalog__header">
+                        <h2 class="catalog__header__heading">Каталог</h2>
+                        <a href="#" class="catalog__header__link btn btn-border">Перейти в&nbsp;каталог</a>
+                    </div>
+                     <ul class="catalog__list">
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/crushed-stone.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Щебень</span>
+                            </a>      
+                        </li>    
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/sift.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Отсев</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/bute-stone.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Бут</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                               <img class="catalog__list-item__img" src="image/catalog/sand.png" 
+                                width="236" height="164"> 
+                               <span class="catalog__list-item__name">Песок</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/cerazmit.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Керамзит</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/fruit-soil.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Плод. грунт</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/aerated-concrete.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Газобетон</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/shell-stone.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Ракушка</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/brick.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Кирпич</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/stone-chips.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Крошка</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/sift.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Цемент</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/tarsa.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Тырса</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/blend.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Смеси</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/concrete-mesh.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Сетка (бетон)</span>
+                            </a>      
+                        </li>
+                        <li class="catalog__list-item">        
+                            <a href="#" class="catalog__list-item__link">
+                                <img class="catalog__list-item__img" src="image/catalog/concentrate.png" 
+                                width="236" height="164">
+                                <span class="catalog__list-item__name">Концентрат</span>
+                            </a>      
+                        </li>
+                    </ul>   
                 </div>
             </div>
         </section>
@@ -338,6 +447,6 @@
         </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="banner.js"></script>
 </body>
 </html>
