--- a/test-task/inertstoy-home/home.html
+++ b/test-task/inertstoy-home/home.html
@@ -148,6 +148,53 @@
                                 <button class="banner__btn btn btn-red">Узнать цены</button>
                             </div>
                         </div>
+                        <div class="banner swiper-slide">
+                            <div class="banner__content">
+                                <h2 class="banner__heading">Закажите щебень со&nbsp;скидкой&nbsp;10%</h2>
+                                <ul class="banner__list">
+                                    <li class="banner__list-item">Диоритовый</li>
+                                    <li class="banner__list-item">Мраморный</li>
+                                    <li class="banner__list-item">Белогорский</li>
+                                    <li class="banner__list-item">Ароматный</li>
+                                </ul>
+                                <button class="banner__btn btn btn-red">Узнать цены</button>
+                            </div>
+                        </div>
+                        <div class="banner swiper-slide">
+                            <div class="banner__content">
+                                <h2 class="banner__heading">Закажите щебень со&nbsp;скидкой&nbsp;10%</h2>
+                                <ul class="banner__list">
+                                    <li class="banner__list-item">Диоритовый</li>
+                                    <li class="banner__list-item">Мраморный</li>
+                                    <li class="banner__list-item">Белогорский</li>
+                                    <li class="banner__list-item">Ароматный</li>
+                                </ul>
+                                <button class="banner__btn btn btn-red">Узнать цены</button>
+                            </div>
+                        </div>
+                        <div class="banner swiper-slide">
+                            <div class="banner__content">
+                                <h2 class="banner__heading">Закажите щебень со&nbsp;скидкой&nbsp;10%</h2>
+                                <ul class="banner__list">
+                                    <li class="banner__list-item">Диоритовый</li>
+                                    <li class="banner__list-item">Мраморный</li>
+                                    <li class="banner__list-item">Белогорский</li>
+                                    <li class="banner__list-item">Ароматный</li>
+                                </ul>
+                                <button class="banner__btn btn btn-red">Узнать цены</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev">
+                        <svg width="19" height="34" aria-hidden="true">
+                            <use xlink:href="image/sprite.svg#arrow-prev"></use>
+                        </svg>
+                    </div>
+                    <div class="swiper-button-next">
+                        <svg width="19" height="34" aria-hidden="true">
+                            <use xlink:href="image/sprite.svg#arrow-next"></use>
+                        </svg>
                     </div>
                 </div>
             </div>
