--- a/test-task/inertstoy-home/home.html
+++ b/test-task/inertstoy-home/home.html
@@ -199,9 +199,8 @@
                 </div>
             </div>
         </section>
-        <section class="catalog-wrapper">
+        <section class="catalog">
             <div class="container">
-                <div class="catalog">
                     <div class="catalog__header">
                         <h2 class="catalog__header__heading">Каталог</h2>
                         <a href="#" class="catalog__header__link btn btn-border">Перейти в&nbsp;каталог</a>
@@ -313,7 +312,34 @@
                             </a>      
                         </li>
                     </ul>   
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
+                <div class="services__header">
+                    <h2 class="services__header__heading">Услуги</h2>
+                    <a href="#" class="services__header__link btn btn-border">Все услуги</a>
                 </div>
+                <ul class="services__list">
+                    <li class="services__list-item">
+                        <h3 class="services__list-item__headinng">Доставка</h3>
+                        <span class="services__list-item__caption">Рассчитывается индивидуально.<br/> Цена ниже при оптовых заказах</span>
+                        <a href="#" class="services__list-item__link btn btn-red">узнать условия</a>
+                        <img class="services__list-item__img services__list-item__img--1" src="image/delivery.png" alt="Изображение грузовика">
+                    </li>
+                    <li class="services__list-item">
+                        <h3 class="services__list-item__headinng">Вывоз грунта</h3>
+                        <span class="services__list-item__caption">Рассчитывается индивидуально.<br/>Цена ниже при оптовых заказах</span>
+                        <a href="#" class="services__list-item__link btn btn-red">узнать условия</a>
+                        <img class="services__list-item__img services__list-item__img--2" src="image/soil-removal.png" alt="Изображение эскаватора">
+                    </li>
+                    <li class="services__list-item services__list-item--flat">
+                        <h3 class="services__list-item__headinng">Аренда спецтехники</h3>
+                        <span class="services__list-item__caption">Стоимость от 300 руб/час </span>
+                        <a href="#" class="services__list-item__link btn btn-red">Посмотреть автопарк</a>
+                        <img class="services__list-item__img services__list-item__img--3" src="image/rental.png" alt="Изображение эскаватора">
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
