--- a/test-task/inertstoy-home/home.html
+++ b/test-task/inertstoy-home/home.html
@@ -342,6 +342,73 @@
                 </ul>
             </div>
         </section>
+        <section class="about">
+            <div class="container">
+                <div class="about-wrapper">
+                    <div class="about-content">
+                        <div class="about-content__description">
+                            <h2 class="about-content__heading">О&nbsp;компании</h2>
+                            <p class="about-content__text">
+                                Грамотные схемы логистики и&nbsp;современные способы добычи позволяют 
+                                нам не&nbsp;только оперативно доставлять щебенку и&nbsp;песок прямо 
+                                до&nbsp;объекта строительства, но&nbsp;и&nbsp;минимизировать количество брака, 
+                                тем самым сделав стоимость щебня и&nbsp;песка максимально приемлемой для клиентов 
+                                различного уровня.
+                            </p>
+                            <a href="#" class="about-content__link btn btn-border">подробнее о&nbsp;компании</a>
+                        </div>
+                        <ul class="about-content__list">
+                            <li class="about-content__list-item">
+                                Качество щебня, песка и&nbsp;другой нашей продукции подтверждено соответствующей документацией
+                            </li>
+                            <li class="about-content__list-item">
+                                Мы&nbsp;придерживаемся гибкой ценовой политики, заключаем договоры длительного сотрудничества 
+                                на&nbsp;особых условиях
+                            </li>
+                            <li class="about-content__list-item">
+                                Наличие спецтехники и&nbsp;квалифицированного персонала обеспечивает высокий уровень 
+                                обслуживания клиента на&nbsp;всех этапах
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="about__statistics">
+                        <li class="about__statistics-item">
+                            <div class="about__statistics-item__border border">
+                                <div class="border__overlay"></div>
+                            </div>
+                            <div class="about__statistics-item__content">
+                                <h3 class="about__statistics-item__header">
+                                    до&nbsp;<span class="about__statistics-item__header__accent">1&nbsp;000</span> тонн
+                                </h3>
+                                <span class="about__statistics-item__caption">максимальный объем доставки</span>
+                            </div>
+                        </li>
+                        <li class="about__statistics-item">
+                            <div class="about__statistics-item__border border">
+                                <div class="border__overlay"></div>
+                            </div>
+                            <div class="about__statistics-item__content">
+                                <h3 class="about__statistics-item__header">
+                                    на&nbsp;<span class="about__statistics-item__header__accent">10%</span>
+                                </h3>
+                                <span class="about__statistics-item__caption">цены ниже рыночных</span>
+                            </div>
+                        </li>                        
+                        <li class="about__statistics-item">
+                            <div class="about__statistics-item__border border">
+                                <div class="border__overlay"></div>
+                            </div>
+                            <div class="about__statistics-item__content">
+                                <h3 class="about__statistics-item__header">
+                                   <span class="about__statistics-item__header__accent">20+</span> 
+                                </h3>
+                                <span class="about__statistics-item__caption">число машин в&nbsp;автопарке</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
