хиты продаж раздел

--- a/test-task/inertstoy-home/home.html
+++ b/test-task/inertstoy-home/home.html
@@ -409,6 +409,124 @@
                 </div>
             </div>
         </section>
+        <section class="top">
+            <div class="container">
+                <div class="top__header">
+                    <h2 class="top__header__heading">Хиты продаж</h2>
+                    <a href="#" class="top__header__link btn btn-border">Смотреть все</a>
+                </div>
+                <div class="top__catalog">
+                    <div class="top__catalog__product-card">
+                        <img class="top__catalog__product-card__img" src="image/top--crushed-stone.png" alt="Щебень"
+                        width="285" height="255">
+                        <div class="top__catalog__product-card__content">
+                            <span class="top__catalog__product-card__price">от&nbsp;1050&nbsp;руб/т</span>
+                            <span class="top__catalog__product-card__name">Щебень Белогорский фракция 5-20&nbsp;мм</span>
+                            <span class="top__catalog__product-card__availability">
+                                <svg class="top__catalog__product-card__availability-icon" width="18" height="18" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-check"></use>
+                                </svg>
+                                В наличии
+                            </span>
+                        </div>
+                        <div class="top__catalog__product-card__bottom">
+                            <button class="top__catalog__product-card__cart btn btn-red">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-cart"></use>
+                                </svg>
+                                В&nbsp;корзину
+                            </button>
+                            <button class="top__catalog__product-card__fav btn">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-fav"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="top__catalog__product-card">
+                        <img class="top__catalog__product-card__img" src="image/top--crushed-stone.png" alt="Щебень"
+                        width="285" height="255">
+                        <div class="top__catalog__product-card__content">
+                            <span class="top__catalog__product-card__price">от&nbsp;1050&nbsp;руб/т</span>
+                            <span class="top__catalog__product-card__name">Щебень Белогорский фракция 5-20&nbsp;мм</span>
+                            <span class="top__catalog__product-card__availability">
+                                <svg class="top__catalog__product-card__availability-icon" width="18" height="18" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-check"></use>
+                                </svg>
+                                В наличии
+                            </span>
+                        </div>
+                        <div class="top__catalog__product-card__bottom">
+                            <button class="top__catalog__product-card__cart btn btn-red">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-cart"></use>
+                                </svg>
+                                В&nbsp;корзину
+                            </button>
+                            <button class="top__catalog__product-card__fav btn">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-fav"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="top__catalog__product-card">
+                        <img class="top__catalog__product-card__img" src="image/top--crushed-stone.png" alt="Щебень"
+                        width="285" height="255">
+                        <div class="top__catalog__product-card__content">
+                            <span class="top__catalog__product-card__price">от&nbsp;1050&nbsp;руб/т</span>
+                            <span class="top__catalog__product-card__name">Щебень Белогорский фракция 5-20&nbsp;мм</span>
+                            <span class="top__catalog__product-card__availability">
+                                <svg class="top__catalog__product-card__availability-icon" width="18" height="18" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-check"></use>
+                                </svg>
+                                В наличии
+                            </span>
+                        </div>
+                        <div class="top__catalog__product-card__bottom">
+                            <button class="top__catalog__product-card__cart btn btn-red">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-cart"></use>
+                                </svg>
+                                В&nbsp;корзину
+                            </button>
+                            <button class="top__catalog__product-card__fav btn">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-fav"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="top__catalog__product-card">
+                        <img class="top__catalog__product-card__img" src="image/top--crushed-stone.png" alt="Щебень"
+                        width="285" height="255">
+                        <div class="top__catalog__product-card__content">
+                            <span class="top__catalog__product-card__price">от&nbsp;1050&nbsp;руб/т</span>
+                            <span class="top__catalog__product-card__name">Щебень Белогорский фракция 5-20&nbsp;мм</span>
+                            <span class="top__catalog__product-card__availability">
+                                <svg class="top__catalog__product-card__availability-icon" width="18" height="18" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-check"></use>
+                                </svg>
+                                В наличии
+                            </span>
+                        </div>
+                        <div class="top__catalog__product-card__bottom">
+                            <button class="top__catalog__product-card__cart btn btn-red">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-cart"></use>
+                                </svg>
+                                В&nbsp;корзину
+                            </button>
+                            <button class="top__catalog__product-card__fav btn">
+                                <svg class="top__catalog__product-card__cart-icon" width="24" height="24" aria-hidden="true">
+                                    <use xlink:href="image/sprite.svg#icon-fav"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
