как сделать заказ

--- a/test-task/inertstoy-home/index.html
+++ b/test-task/inertstoy-home/index.html
@@ -683,7 +683,49 @@
         </div>
       </section>
       <section class="order">
-        <div class="container"></div>
+        <div class="container">
+          <div class="order__wrapper">
+            <h2 class="order__heading">Как сделать заказ</h2>
+            <ol class="order__list">
+              <li class="order__list-item order__list-item-1">
+                <div class="order__list-item__img-wrapper">
+                  <img class="order__list-item__img" src="image/sprite/icon-phone.svg" alt="Иконка телефона">
+                </div>
+                <span class="order__list-item__step">01</span>
+                <span class="order__list-item__step-caption">Позвоните или оставьте заявку</span>
+              </li>
+              <li class="order__list-item">
+                <div class="order__list-item__img-wrapper">
+                  <img class="order__list-item__img" src="image/sprite/icon-hand-coin.svg" alt="Иконка оплаты">
+                </div>
+                <span class="order__list-item__step">02</span>
+                <span class="order__list-item__step-caption">Обсудите с&nbsp;менеджером условия оплаты и&nbsp;доставки</span>
+              </li>
+              <li class="order__list-item">
+                <div class="order__list-item__img-wrapper">
+                  <img class="order__list-item__img" src="image/sprite/icon-delivery.svg" alt="Иконка грузовика">
+                </div>
+                <span class="order__list-item__step">03</span>
+                <span class="order__list-item__step-caption">Получите заказ в&nbsp;оговоренный срок</span>
+              </li>
+              <li class="order__list-item">
+                <div class="order__list-item__img-wrapper">
+                  <img class="order__list-item__img" src="image/sprite/icon-docs.svg" alt="Иконка документов">
+                </div>
+                <span class="order__list-item__step">04</span>
+                <span class="order__list-item__step-caption">Документы привозят с&nbsp;машиной</span>
+              </li>
+            </ol>
+            <div class="order__btn-wrapper">
+              <button class="order__btn-application btn btn-red">
+                оставить заявку
+              </button>
+              <button class="order__btn-call btn btn-border">
+                позвонить
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="parners">
         <div class="container">
